cmake_minimum_required(VERSION 2.8)

SET( CALIBRATE_PROJ_NAME "calibration" )

SET( HEADER_LIST
    calibration.h
)

SET( SRC_LIST
    calibration.cpp
)

# INCLUDES
INCLUDE_DIRECTORIES( ${MY_INCLUDES} )

# EXECUTABLE
ADD_EXECUTABLE( ${CALIBRATE_PROJ_NAME} ${SRC_LIST} ${HEADERS_LIST} )

# LINK
TARGET_LINK_LIBRARIES( ${CALIBRATE_PROJ_NAME} ${MY_LIBRARIES} )
